hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_offsetSet_invalid_parameter.php
<?php
$list = new SplDoublyLinkedList();
$a = $list->offsetSet();
if(is_null($a)) {
	echo 'PASS';
}
?>